Fixing Music Guide Repo link alignment in second-last slide

--- a/css/activities.css
+++ b/css/activities.css
@@ -1222,7 +1222,8 @@ table {
     overflow: visible;
     width: calc(100% - 130px) !important;
     max-width: 350px;
-    padding: 1rem 1rem 0 1rem;
+    padding-top: 2.5rem; 
+    padding-bottom: 2.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1239,6 +1240,10 @@ table {
     text-align: center;
     line-height: 1.2;
     margin: auto;
+}
+
+#helpBodyDiv p {
+    margin: 0.5rem 0; 
 }
 
 #helpBodyDiv a {
